--- a/index.html
+++ b/index.html
@@ -7,13 +7,20 @@
     <style>
         body { font-family: sans-serif; background-color: #0f172a; color: white; margin: 0; display: flex; flex-direction: column; align-items: center; padding: 20px; }
         .container { max-width: 500px; width: 100%; }
-        .card { background: #1e293b; padding: 30px; border-radius: 20px; text-align: center; box-shadow: 0 10px 25px rgba(0,0,0,0.3); margin-bottom: 20px; }
+        .card { background: #1e293b; padding: 25px; border-radius: 20px; text-align: center; box-shadow: 0 10px 25px rgba(0,0,0,0.3); margin-bottom: 20px; border: 1px solid #334155; }
         h1 { color: #38bdf8; margin: 10px 0; font-size: 28px; }
-        .bio { color: #94a3b8; font-size: 16px; margin-bottom: 20px; }
-        .section-title { width: 100%; text-align: left; font-size: 18px; color: #38bdf8; margin: 10px 0; border-bottom: 1px solid #334155; padding-bottom: 5px; }
-        .skill-box { background: #1e293b; width: 100%; padding: 15px; border-radius: 12px; margin-bottom: 10px; display: flex; justify-content: space-between; box-sizing: border-box; }
-        .btn { display: block; background: #38bdf8; color: #0f172a; text-decoration: none; padding: 12px; border-radius: 10px; font-weight: bold; margin-top: 20px; }
-        .footer { margin-top: 30px; font-size: 12px; color: #475569; }
+        .bio { color: #94a3b8; font-size: 14px; margin-bottom: 20px; }
+        .section-title { width: 100%; text-align: left; font-size: 18px; color: #38bdf8; margin: 15px 0 10px 0; border-bottom: 1px solid #334155; padding-bottom: 5px; }
+        .item-box { background: #1e293b; width: 100%; padding: 12px; border-radius: 12px; margin-bottom: 8px; display: flex; justify-content: space-between; box-sizing: border-box; border: 1px solid #334155; }
+        .btn { display: block; background: #38bdf8; color: #0f172a; text-decoration: none; padding: 12px; border-radius: 10px; font-weight: bold; margin-top: 15px; transition: 0.3s; }
+        .btn:hover { opacity: 0.8; }
+        
+        /* Galereya uslubi */
+        .gallery { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-top: 10px; }
+        .gallery img { width: 100%; border-radius: 10px; border: 2px solid #38bdf8; transition: 0.3s; cursor: pointer; }
+        .gallery img:hover { transform: scale(1.05); }
+        
+        .footer { margin-top: 30px; font-size: 11px; color: #475569; text-align: center; }
     </style>
 </head>
 <body>
@@ -25,13 +32,18 @@
             <a href="https://t.me/Pain_2007" class="btn">Telegram orqali bog'lanish</a>
         </div>
 
+        <div class="section-title">Mening rasmlarim</div>
+        <div class="gallery">
+            <img src="https://via.placeholder.com/200" alt="Rasm 1">
+            <img src="https://via.placeholder.com/200" alt="Rasm 2">
+        </div>
+
         <div class="section-title">Bilimlarim (Skills)</div>
-        <div class="skill-box"><span>HTML / CSS</span> <span>80%</span></div>
-        <div class="skill-box"><span>Kiberxavfsizlik</span> <span>Tayyorlanmoqda</span></div>
-        <div class="skill-box"><span>OS Linux</span> <span>O'rganilmoqda</span></div>
+        <div class="item-box"><span>HTML / CSS</span> <span>80%</span></div>
+        <div class="item-box"><span>Kiberxavfsizlik</span> <span>Tayyorlanmoqda</span></div>
 
         <div class="section-title">Loyihalarim</div>
-        <div class="skill-box"><span>Shaxsiy Portfolio</span> <span>v1.0</span></div>
+        <div class="item-box"><span>Shaxsiy Portfolio</span> <span>v1.1</span></div>
     </div>
 
     <div class="footer">© 2026 Meliqoziyev. Barcha huquqlar himoyalangan.</div>
