--- a/index.html
+++ b/index.html
@@ -50,4 +50,4 @@
         .problem { border-bottom: 2px solid #fbbf24; color: #1f2937; font-weight: 500; }
         .code-link { background-color: #1f2937; color: #ffffff; padding: 2px 8px; border-radius: 6px; font-weight: 500; }
         
-        .section-title { width: 100%; text-align: left; font-size: 13px; font-weight: 700; color:
+        .section-title { width: 100%; text-align: left; font-size: 13px; font-weight: 700; color
