--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meliqoziyev.uz | Ultimate Snow</title>
+    <title>Meliqoziyev.uz | Fixed Video</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -16,8 +16,16 @@
             width: 100%; height: 100%;
             z-index: 10000;
             background: #000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
-        #intro-video-element { width: 100%; height: 100%; object-fit: cover; }
+        /* Video to'liq ekranni qoplashi uchun */
+        #intro-video-element { 
+            min-width: 100%; 
+            min-height: 100%;
+            object-fit: cover;
+        }
 
         /* 2. ASOSIY SAYT */
         #main-site {
@@ -34,7 +42,6 @@
 
         #snow-canvas { position: fixed; top: 0; left: 0; z-index: 1; pointer-events: none; }
 
-        /* PROFIL */
         .avatar-box {
             width: 120px; height: 120px;
             border-radius: 50%;
@@ -47,7 +54,6 @@
 
         h1 { font-size: 28px; letter-spacing: 2px; margin-bottom: 25px; }
 
-        /* TUGMALAR */
         .card {
             width: 280px;
             padding: 12px;
@@ -68,10 +74,8 @@
         }
         .card:hover { background: rgba(255, 255, 255, 0.2); transform: scale(1.03); }
 
-        /* SOAT */
         #clock { position: fixed; top: 25px; right: 25px; font-size: 22px; font-weight: 900; font-family: monospace; z-index: 20; }
 
-        /* LIKE TUGMASI (PASTDA CHAPDA) */
         #like-btn {
             position: fixed;
             bottom: 25px;
@@ -79,18 +83,17 @@
             font-size: 30px;
             cursor: pointer;
             z-index: 100;
-            transition: transform 0.3s;
             color: #fff;
         }
-        #like-btn:active { transform: scale(1.3); }
         .liked { color: #ff0000 !important; text-shadow: 0 0 15px #ff0000; }
     </style>
 </head>
 <body onmousedown="createBurst(event)">
 
     <div id="video-intro">
-        <video id="intro-video-element" autoplay muted playsinline>
+        <video id="intro-video-element" autoplay muted loop playsinline poster="https://i.ibb.co/vz6mD7y/matrix-poster.jpg">
             <source src="https://assets.mixkit.co/videos/preview/mixkit-matrix-style-green-digital-binary-code-41203-large.mp4" type="video/mp4">
+            Sizning brauzeringiz videoni qo'llab-quvvatlamaydi.
         </video>
     </div>
 
@@ -98,30 +101,26 @@
 
     <div id="main-site">
         <div id="clock">00:00:00</div>
-        
         <div class="avatar-box">
              <img src="https://i.pinimg.com/originals/8a/0b/4c/8a0b4ca2b06e93817117865f37bc449e.jpg" alt="Meliqoziyev">
         </div>
-
         <h1>meliqoziyev.uz</h1>
-
-        <a href="https://instagram.com/ezz_mafiya" target="_blank" class="card">
-            <i class="fab fa-instagram" style="color: #e4405f;"></i> Instagram
-        </a>
-        <a href="https://t.me/Pain_2007" target="_blank" class="card">
-            <i class="fab fa-telegram" style="color: #24A1DE;"></i> Telegram
-        </a>
-        <a href="https://youtube.com/@uzclaver_official" target="_blank" class="card">
-            <i class="fab fa-youtube" style="color: #FF0000;"></i> YouTube
-        </a>
-
-        <div id="like-btn" onclick="toggleLike(event)">
-            <i class="fas fa-heart"></i>
-        </div>
+        <a href="https://instagram.com/ezz_mafiya" target="_blank" class="card"><i class="fab fa-instagram" style="color: #e4405f;"></i> Instagram</a>
+        <a href="https://t.me/Pain_2007" target="_blank" class="card"><i class="fab fa-telegram" style="color: #24A1DE;"></i> Telegram</a>
+        <a href="https://youtube.com/@uzclaver_official" target="_blank" class="card"><i class="fab fa-youtube" style="color: #FF0000;"></i> YouTube</a>
+        <div id="like-btn" onclick="toggleLike(event)"><i class="fas fa-heart"></i></div>
     </div>
 
     <script>
-        // --- 5 SEKUNDDAN KEYIN VIDEONI O'CHIRISH ---
+        // Videoni qo'lda yurgizib yuborishga harakat qilish
+        window.addEventListener('load', function() {
+            var video = document.getElementById('intro-video-element');
+            video.play().catch(function(error) {
+                console.log("Avtomatik ijro to'xtatildi, lekin biz davom etamiz.");
+            });
+        });
+
+        // 5 SEKUNDDAN KEYIN O'TISH
         setTimeout(() => {
             const intro = document.getElementById('video-intro');
             const main = document.getElementById('main-site');
@@ -136,7 +135,6 @@
             }, 1000);
         }, 5000);
 
-        // --- SOAT RANGINI O'ZGARTIRISH ---
         function startClock() {
             const colors = ['#00ff00', '#00ffff', '#ff0000', '#ffff00', '#ff00ff', '#ffffff'];
             const clock = document.getElementById('clock');
@@ -149,13 +147,12 @@
             }, 1000);
         }
 
-        // --- LIKE FUNKSIYASI ---
         function toggleLike(e) {
-            e.stopPropagation(); // Qor sachrashiga xalaqit bermaslik uchun
+            e.stopPropagation();
             document.getElementById('like-btn').classList.toggle('liked');
         }
 
-        // --- QOR EFFEKTI ---
+        // QOR EFFEKTI
         const canvas = document.getElementById('snow-canvas');
         const ctx = canvas.getContext('2d');
         let particles = [];
@@ -189,7 +186,6 @@
             }
         }
 
-        // --- QOR SACHRASHI ---
         function createBurst(e) {
             if(document.getElementById('main-site').style.display === "flex") {
                 for (let i = 0; i < 12; i++) {
@@ -208,7 +204,6 @@
             particles.forEach(p => { p.update(); p.draw(); });
             requestAnimationFrame(animate);
         }
-
         window.onresize = () => { canvas.width = window.innerWidth; canvas.height = window.innerHeight; };
     </script>
 </body>
